# EastWind

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rebuild.sh  run.sh
EastWind/: CMakeLists.txt  EastWind.h
EastWind/assets/shaders/: basic_shader.glsl  basic_texture_shader.glsl
EastWind/internal/EastWind_Math/: CMakeLists.txt  EastWind_Graphics.h  EastWind_Math.h  README.md  rebuild.sh  run.sh
EastWind/internal/EastWind_Math/lib/gcc/: libasan.dylib  libatomic.1.dylib  libgfortran.5.dylib  libgfortran.spec  libitm.1.dylib  libobjc-gnu.4.dylib  libquadmath.dylib  libssp.dylib  libstdc++.6.dylib-gdb.py  libubsan.1.dylib
EastWind/internal/EastWind_Math/lib/gcc/gcc/x86_64-apple-darwin21/13/finclude/: ieee_arithmetic.mod  ieee_exceptions.mod  ieee_features.mod  omp_lib.mod  omp_lib_kinds.mod
EastWind/internal/EastWind_Math/lib/gcc/gcc/x86_64-apple-darwin21/13/include/: omp.h
EastWind/internal/EastWind_Math/lib/gcc/gcc/x86_64-apple-darwin21/13/include-fixed/: AvailabilityInternal.h  math.h  stdint.h  stdio.h
EastWind/internal/EastWind_Math/lib/gcc/gcc/x86_64-apple-darwin21/13/include-fixed/dispatch/: object.h
EastWind/internal/EastWind_Math/lib/gcc/gcc/x86_64-apple-darwin21/13/include-fixed/os/: base.h  trace.h
EastWind/internal/EastWind_Math/lib/gcc/gcc/x86_64-apple-darwin21/13/install-tools/: mkheaders.conf
EastWind/internal/EastWind_Math/lib/gcc/gcc/x86_64-apple-darwin21/13/plugin/: gtype.state
EastWind/internal/EastWind_Math/lib/gcc/gcc/x86_64-apple-darwin21/13/plugin/include/: auto-host.h  b-header-vars  configargs.h  gtype-desc.h  insn-codes.h  options.h  tm-preds.h  tm.h  version.h
EastWind/internal/EastWind_Math/src/: EW_Blas.h  EW_Lapack.h  EW_Matrix.cpp  EW_Matrix.h  EW_Vector.cpp  EW_Vector.h
EastWind/internal/EastWind_Math/src/Graphics/: quaternion.cpp  quaternion.h  rotate.h  transform.h  utils.h
EastWind/internal/EastWind_Math/test/: CMakeLists.txt  EW_MATH_TEST.cpp  README.md
EastWind/src/: EW_App.cpp  EW_App.h  EW_Codes.h  EW_Core.h  EW_Input.h  EW_Layer.cpp  EW_Layer.h  EW_LayerStack.cpp  EW_LayerStack.h  EW_Log.h  EW_Timestep.h  EW_Window.cpp  EW_Window.h  EW_entry_point.h  EW_pch.cpp  EW_pch.h
EastWind/src/Configuration/: gflags_defs.cpp  gflags_defs.h
EastWind/src/Core/: ReloadManager.cpp  ReloadManager.h
EastWind/src/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
EastWind/src/Geometry/: FunctionGeo.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Ray.cpp  Ray.h
EastWind/src/Physix/: Physics.cpp  Physics.h
EastWind/src/Physix/PhysixSDK/Bullet/: Bullet.cpp  Bullet.h
EastWind/src/Platform/OS/MacOS/: CocoaWindow.cpp  CocoaWindow.h  OSXInput.cpp  OSXInput.h
EastWind/src/Platform/SDK/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
EastWind/src/Renderer/: Buffer.cpp  Buffer.h  BufferState.cpp  BufferState.h  Camera.cpp  Camera.h  GraphicsContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
EastWind/src/Scene/: Scene.cpp  Scene.h  SkyDome.cpp  SkyDome.h  VirtualWorld.h
EastWind/src/Utility/: MD5.cpp  MD5.h
EastWind/ut/: CMakeLists.txt  md5_test.cpp
Example/: example.py
Python/: CMakeLists.txt
Python/src/: Binding.cpp  Core.cpp  Core.h  Geometry.cpp  ImGui.cpp  Math.cpp  PyMath.h  Renderer.cpp  def.h  example.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: texture_shader.glsl
Sandbox/config/: resource.yaml
Sandbox/src/: ClearLayer.h  ConfigManager.h  MeshLayer.h  SandBoxApp.cpp  SandBoxApp.hpp  TestLayer.h  main.cpp
Sandbox/src/ImGui/: ImGuiLayer.h
